@@ -10,10 +10,10 @@ import java.util.Set;
 import java.util.stream.Collectors;
 
 
-import static psf.ucitavanje.obrazaca.security.user.Permission.ADMIN_CREATE;
-import static psf.ucitavanje.obrazaca.security.user.Permission.ADMIN_DELETE;
-import static psf.ucitavanje.obrazaca.security.user.Permission.ADMIN_READ;
-import static psf.ucitavanje.obrazaca.security.user.Permission.ADMIN_UPDATE;
+//import static psf.ucitavanje.obrazaca.security.user.Permission.ADMIN_CREATE;
+//import static psf.ucitavanje.obrazaca.security.user.Permission.ADMIN_DELETE;
+//import static psf.ucitavanje.obrazaca.security.user.Permission.ADMIN_READ;
+//import static psf.ucitavanje.obrazaca.security.user.Permission.ADMIN_UPDATE;
 import static psf.ucitavanje.obrazaca.security.user.Permission.MANAGER_CREATE;
 import static psf.ucitavanje.obrazaca.security.user.Permission.MANAGER_DELETE;
 import static psf.ucitavanje.obrazaca.security.user.Permission.MANAGER_READ;
@@ -23,17 +23,17 @@ import static psf.ucitavanje.obrazaca.security.user.Permission.MANAGER_UPDATE;
 public enum Role {
 
   USER(Collections.emptySet()),
-  ADMIN(
-          Set.of(
-                  ADMIN_READ,
-                  ADMIN_UPDATE,
-                  ADMIN_DELETE,
-                  ADMIN_CREATE,
-                  MANAGER_READ,
-                  MANAGER_UPDATE,
-                  MANAGER_DELETE,
-                  MANAGER_CREATE
-          )
+  ADMIN(Collections.emptySet()
+//          Set.of(
+//                  ADMIN_READ,
+//                  ADMIN_UPDATE,
+//                  ADMIN_DELETE,
+//                  ADMIN_CREATE,
+//                  MANAGER_READ,
+//                  MANAGER_UPDATE,
+//                  MANAGER_DELETE,
+//                  MANAGER_CREATE
+//          )
   ),
   MANAGER(
           Set.of(
